--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+	"test": "nodeunit ./tests/"
   },
   "dependencies": {
     "express": "~3.4.8",
