--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "application-name",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -13,6 +13,7 @@
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "ejs": "~0.8.5",
-    "mysql": "~2.5.1"
+    "mysql": "~2.5.1",
+    "express-validator": "~2.6.0"
   }
 }
