--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-	"test": "nodeunit ./tests/"
+    "test": "./node_modules/nodeunit/bin/nodeunit ./tests/"
   },
   "dependencies": {
     "express": "~3.4.8",
@@ -14,6 +14,7 @@
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "ejs": "~0.8.5",
-    "mysql": "~2.5.1"
+    "mysql": "~2.5.1",
+    "nodeunit": "~0.9.0"
   }
 }
