--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "debug": "~0.7.4",
     "ejs": "~0.8.5",
     "mysql": "~2.5.1",
-    "express-validator": "~2.6.0"
+    "express-validator": "~2.6.0",
     "nodeunit": "~0.9.0"
   }
 }
