--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-	"test": "nodeunit ./tests/"
+    "test": "nodeunit ./tests/"
   },
   "dependencies": {
     "express": "~3.4.8",
@@ -15,6 +15,7 @@
     "debug": "~0.7.4",
     "ejs": "~0.8.5",
     "mysql": "~2.5.1",
-    "express-validator": "~2.6.0"
+    "express-validator": "~2.6.0",
+    "ejs-locals": "~1.0.2"
   }
 }
