--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "./node_modules/nodeunit/bin/nodeunit ./tests/"
+    "test": "node ./node_modules/nodeunit/bin/nodeunit ./tests/"
   },
   "dependencies": {
     "express": "~3.4.8",
