--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql": "~2.5.1",
     "express-validator": "~2.6.0",
     "ejs-locals": "~1.0.2",
-    "nodeunit": "~0.9.0"
+    "nodeunit": "~0.9.0",
+    "lodash": "~2.4.1"
   }
 }
