--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "ejs": "~0.8.5",
-    "mysql": "~2.5.1",
     "express-validator": "~2.6.0",
     "ejs-locals": "~1.0.2",
     "nodeunit": "~0.9.0",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "mysql2": "~0.13.0"
   }
 }
