--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "node ./node_modules/nodeunit/bin/nodeunit ./tests/"
+    "test": "node ./node_modules/.bin/mocha ./tests/"
   },
   "dependencies": {
     "express": "~3.4.8",
@@ -16,8 +16,9 @@
     "ejs": "~0.8.5",
     "express-validator": "~2.6.0",
     "ejs-locals": "~1.0.2",
-    "nodeunit": "~0.9.0",
     "lodash": "~2.4.1",
-    "mysql2": "~0.13.0"
+    "mysql2": "~0.13.0",
+    "mocha": "~2.0.1",
+    "should": "~4.3.0"
   }
 }
