--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "~2.4.1",
     "mysql2": "~0.13.0",
     "mocha": "~2.0.1",
-    "should": "~4.3.0"
+    "should": "~4.3.0",
+    "synchronize": "~0.9.8"
   }
 }
