--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "should": "~4.3.0",
     "synchronize": "~0.9.8",
     "dateformat": "~1.0.8",
-    "multer": "~0.1.6"
+    "multer": "~0.1.6",
+    "express-mysql-session": "~0.3.1"
   }
 }
