--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express": "~3.4.8",
     "static-favicon": "~1.0.0",
     "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
+    "cookie-parser": "*",
     "body-parser": "~1.0.0",
     "debug": "~0.7.4",
     "ejs": "~0.8.5",
@@ -23,6 +23,9 @@
     "synchronize": "~0.9.8",
     "dateformat": "~1.0.8",
     "multer": "~0.1.6",
-    "express-mysql-session": "~0.3.1"
+    "express-mysql-session": "~0.3.1",
+    "socket.io": "~1.2.1",
+    "express-session": "~1.9.3",
+    "cookie": "~0.1.2"
   }
 }
